[gd_scene load_steps=2 format=3 uid="uid://bdq65y40smyok"]

[ext_resource type="Script" path="res://Misc/Inventory/slot/Slot.gd" id="1_srt30"]

[node name="Slot" type="PanelContainer"]
custom_minimum_size = Vector2(64, 64)
script = ExtResource("1_srt30")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0

[node name="TextureRect" type="TextureRect" parent="MarginContainer"]
modulate = Color(1, 1, 1, 0.607843)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="QuantityLabel" type="Label" parent="."]
visible = false
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
text = "x99"

[node name="ActionButtonLabel" type="Label" parent="."]
visible = false
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_colors/font_outline_color = Color(0, 0, 0, 0.839216)
theme_override_constants/outline_size = 3
theme_override_constants/line_spacing = 0
text = "1"

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
